--- a/DataStructure/DataStructure/DataStructure.vcxproj.filters
+++ b/DataStructure/DataStructure/DataStructure.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="원형 연결 리스트.cpp">
       <Filter>소스 파일\리스트\연결 리스트</Filter>
     </ClCompile>
+    <ClCompile Include="이중 연결 리스트.cpp">
+      <Filter>소스 파일\리스트\연결 리스트</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
